💄 Fix z-index of placeholder components
This way the overlay is actually visible!

--- a/src/main/resources/static/css/frimgur.css
+++ b/src/main/resources/static/css/frimgur.css
@@ -15,10 +15,10 @@
 .image-placeholder .canvas-container {
     border: 1px solid #000;
     position: absolute;
+    z-index: -1;
 }
 
 .image-placeholder .image-overlay {
-    z-index: 1;
 }
 
 #image-template {
